--- a/garrido.html
+++ b/garrido.html
@@ -236,7 +236,7 @@ $(document).ready(function () {
       <a href="https://cepruai.github.io/uaibmbf/index.html">Spanish</a>
     </li>
     <li>
-      <a href="hola.html">German</a>
+      <a href="https://cepruai.github.io/uaibmbf_ger/index.html">German</a>
     </li>
   </ul>
 </li>
