--- a/lopez.html
+++ b/lopez.html
@@ -236,7 +236,7 @@ $(document).ready(function () {
       <a href="https://cepruai.github.io/uaibmbf/index.html">Spanish</a>
     </li>
     <li>
-      <a href="hola.html">German</a>
+      <a href="https://cepruai.github.io/uaibmbf_ger/index.html">German</a>
     </li>
   </ul>
 </li>
@@ -259,7 +259,7 @@ $(document).ready(function () {
 
 <html>
 <body>
-<p><a href="xxx"><img src="lopez.PNG" width="300" height="350" align= top * left * bottom></p>
+<p><a href="xxx"><img src="lopez.png" width="300" height="350" align= top * left * bottom></p>
 <table border="2">
 <tr>
 <td>
