--- a/equipo.html
+++ b/equipo.html
@@ -236,7 +236,7 @@ $(document).ready(function () {
       <a href="https://cepruai.github.io/uaibmbf/index.html">Spanish</a>
     </li>
     <li>
-      <a href="hola.html">German</a>
+      <a href="https://cepruai.github.io/uaibmbf_ger/index.html">German</a>
     </li>
   </ul>
 </li>
@@ -309,31 +309,31 @@ p    {color: black;}
 <li><p><a href="anke.html"> Anke Mönnig </a></p>
 <ul>
 <li>Rol: Chief economist</li>
-<li>Institution: GWS mbH (Institute of Economics Structures Research)</li>
+<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
 <li>Contact: moennig at gws-os.com</li>
 </ul></li>
 <li><p><a href="Marc.html">Marc Ingo Wolter </a></p>
 <ul>
 <li>Rol: research associate</li>
-<li>Institution: GWS mbH (Institute of Economics Structures Research)</li>
+<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
 <li>Contact: wolter at gws-os.com</li>
 </ul></li>
 <li><p><a href="anett.html"> Anett Groẞmann </a></p>
 <ul>
 <li>Rol: research associate</li>
-<li>Institution: GWS mbH (Institute of Economics Structures Research)</li>
+<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
 <li>Contact: grossman at gws-os.com</li>
 </ul></li>
 <li><p><a href="loreto.html">Loreto Bieritz </a></p>
 <ul>
 <li>Rol: research associate</li>
-<li>Institution: GWS mbH (Institute of Economics Structures Research)</li>
+<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
 <li>Contact: bieritz at gws-os.com</li>
 </ul></li>
 <li><p><a href="hohmann.html">Frank Hohmann </a></p>
 <ul>
 <li>Rol: research associate</li>
-<li>Institution: GWS mbH (Institute of Economics Structures Research)</li>
+<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
 <li>Contact: hohmann at gws-os.com</li>
 </ul></li>
 <li><p><a href="index_en.html"> Return to Index </a></p></li>
