--- a/equipo.html
+++ b/equipo.html
@@ -285,7 +285,7 @@ p    {color: black;}
 </ul></li>
 <li><p><a href="lopez.html"> Esteban López </a></p>
 <ul>
-<li>Rol: research associate</li>
+<li>Rol: Post doctorate</li>
 <li>Institution: Universidad Adolfo Ibáñez</li>
 <li>Contact: esteban.lopez at uai.cl</li>
 </ul></li>
@@ -322,7 +322,7 @@ p    {color: black;}
 <ul>
 <li>Rol: research associate</li>
 <li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
-<li>Contact: grossman at gws-os.com</li>
+<li>Contact: grossmann at gws-os.com</li>
 </ul></li>
 <li><p><a href="loreto.html">Loreto Bieritz </a></p>
 <ul>
