--- a/aroca.html
+++ b/aroca.html
@@ -291,7 +291,7 @@ $(document).ready(function () {
 <font size="2" color="black"> Web </font>
 </td>
 <td>
-<a href="https://sites.google.com/site/parocasitio1/" class="uri">https://sites.google.com/site/parocasitio1/</a>
+<a href="https://sites.google.com/site/parocasitio1/" class="uri">https://sites.google.com/site/parocasitio1/</a> <a href="http://cepr.uai.cl/equipo/patricio-aroca-2/" class="uri">http://cepr.uai.cl/equipo/patricio-aroca-2/</a>
 </td>
 </tr>
 <tr>
