--- a/eberhard.html
+++ b/eberhard.html
@@ -236,7 +236,7 @@ $(document).ready(function () {
       <a href="https://cepruai.github.io/uaibmbf/index.html">Spanish</a>
     </li>
     <li>
-      <a href="hola.html">German</a>
+      <a href="https://cepruai.github.io/uaibmbf_ger/index.html">German</a>
     </li>
   </ul>
 </li>
@@ -289,6 +289,7 @@ $(document).ready(function () {
 <font size="2" color="black"> Web </font>
 </td>
 <td>
+<a href="http://cepr.uai.cl/equipo/juan-pedro-eberhard-4/" class="uri">http://cepr.uai.cl/equipo/juan-pedro-eberhard-4/</a>
 </td>
 <tr>
 <td>
