--- a/equipo.html
+++ b/equipo.html
@@ -303,8 +303,8 @@ p    {color: black;}
 </ul></li>
 </ul>
 </div>
-<div id="institute-of-economics-structure-research" class="section level4">
-<h4><font face="Arial Black"> Institute of Economics Structure Research: </font></h4>
+<div id="institute-of-economic-structures-research" class="section level4">
+<h4><font face="Arial Black"> Institute of Economic Structures Research: </font></h4>
 <ul>
 <li><p><a href="anke.html"> Anke Mönnig </a></p>
 <ul>
