--- a/lopez.html
+++ b/lopez.html
@@ -291,7 +291,7 @@ BS Ingeniero Comercial, Universidad de Tarapacá (2007), Chile </font>
 <font size="2" color="black"> Sitio Web </font>
 </td>
 <td>
-<a href="https://www.researchgate.net/profile/Esteban_Lopez5" class="uri">https://www.researchgate.net/profile/Esteban_Lopez5</a>
+<a href="https://www.researchgate.net/profile/Esteban_Lopez5" class="uri">https://www.researchgate.net/profile/Esteban_Lopez5</a> <a href="http://cepr.uai.cl/equipo/esteban-lopez/" class="uri">http://cepr.uai.cl/equipo/esteban-lopez/</a>
 </td>
 <tr>
 <td>
