--- a/morales.html
+++ b/morales.html
@@ -290,6 +290,7 @@ $(document).ready(function () {
 <font size="2" color="black"> Sitio Web </font>
 </td>
 <td>
+<a href="http://cepr.uai.cl/equipo/felipe-morales/" class="uri">http://cepr.uai.cl/equipo/felipe-morales/</a>
 </td>
 <tr>
 <td>
