--- a/valdebenito.html
+++ b/valdebenito.html
@@ -289,6 +289,7 @@ $(document).ready(function () {
 <font size="2" color="black"> Web </font>
 </td>
 <td>
+<a href="http://cepr.uai.cl/equipo/rocio-valdebenito-2/" class="uri">http://cepr.uai.cl/equipo/rocio-valdebenito-2/</a>
 </td>
 <tr>
 <td>
