--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ p    {color: black;}
 </style>
 <div id="context" class="section level4">
 <h4><font face="Arial Black"> Context </font></h4>
-<p>En construcción…</p>
+<p>Im Auftrag des BMBF entwickeln Anke Mönnig, Loreto Bieritz, Anett Großmann, Frank Hohmann und Ingo Wolter in Kooperation mit dem chilenischen Partner Patricio Aroca von der Universidad Adolfo Ibáñez und seinem Team in Viña del Mar, Chile, ein regionalisiertes makroökonomisches Modell für Chile (FK 01D16030). Ziel des auf drei Jahre angesetzten Projekts ist es, die Abhängigkeit der chilenischen Wirtschaft vom Kupferbergbau zu analysieren und nachhaltige Strategien für den Kupferbergbausektor zu entwickeln. Zum Auftakt des Projektes haben sich das deutsche und chilenische Team im Dezember 2016 in Viña del Mar, Chile, getroffen und die Arbeitsschritte für die erste Projektphase besprochen. Bis Mitte 2017 wird ein nationales makroökonomisches Modell entwickelt, welches Antworten auf kupferspezifische Fragestellungen zu Besteuerung, Wasser- und Energiekosten sowie internationale Preisentwicklungen liefern kann.</p>
 <html>
 <body>
 <div align="center">
