--- a/garrido.html
+++ b/garrido.html
@@ -292,7 +292,7 @@ PostDoctorate of the Department of Economics and CEEL (Computable and Experiment
 <font size="2" color="black"> Web </font>
 </td>
 <td>
-sites.google.com/site/nicofgarrido/
+<a href="https://sites.google.com/site/nicofgarrido/" class="uri">https://sites.google.com/site/nicofgarrido/</a>
 </td>
 </tr>
 <tr>
@@ -300,7 +300,7 @@ sites.google.com/site/nicofgarrido/
 <font size="2" color="black"> About: </font>
 </td>
 <td>
-<font size="2" color="black"> </font>
+<font size="2" color="black"> Profesor Asociado del Departamento de Economía de la Universidad Diego Portales. Director del Magister en Análisis Económico. </font>
 </td>
 </tr>
 </tr>
