--- a/equipo.html
+++ b/equipo.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Teams</title>
+<title>Equipo de investigación</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -252,7 +252,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Teams</h1>
+<h1 class="title toc-ignore">Equipo de investigación</h1>
 
 </div>
 
@@ -267,39 +267,39 @@ p    {color: black;}
 <ul>
 <li><p><a href="aroca.html"> Patricio Aroca </a></p>
 <ul>
-<li>Rol: Chief economist</li>
-<li>Institution: Universidad Adolfo Ibáñez</li>
-<li>Contact: patricio.aroca at uai.cl</li>
+<li>Rol: Investigador Responsable</li>
+<li>Institución: Universidad Adolfo Ibáñez</li>
+<li>Contacto: patricio.aroca at uai.cl</li>
 </ul></li>
 <li><p><a href="eberhard.html"> Juan Pedro Eberhard </a></p>
 <ul>
-<li>Rol: research associate</li>
-<li>Institution: Universidad Adolfo Ibáñez</li>
-<li>Contact: juan.eberhard at uai.cl</li>
+<li>Rol: Investigador Asociado</li>
+<li>Institución: Universidad Adolfo Ibáñez</li>
+<li>Contacto: juan.eberhard at uai.cl</li>
 </ul></li>
 <li><p><a href="garrido.html"> Nicolás Garrido </a></p>
 <ul>
-<li>Rol: research associate</li>
-<li>Institution: Universidad Diego Portales</li>
-<li>Contact: nicolas.garrido at udp.cl</li>
+<li>Rol: Investigador Asociado</li>
+<li>Institución: Universidad Diego Portales</li>
+<li>Contacto: nicolas.garrido at udp.cl</li>
 </ul></li>
 <li><p><a href="lopez.html"> Esteban López </a></p>
 <ul>
 <li>Rol: Post doctorate</li>
-<li>Institution: Universidad Adolfo Ibáñez</li>
-<li>Contact: esteban.lopez at uai.cl</li>
+<li>Institución: Universidad Adolfo Ibáñez</li>
+<li>Contacto: esteban.lopez at uai.cl</li>
 </ul></li>
 <li><p><a href="valdebenito.html"> Rocío Valdebenito </a></p>
 <ul>
-<li>Rol: research assistant</li>
-<li>Institution: Centro de Economía y Política Regional</li>
-<li>Contact: rocio.valdebenito at uai.cl</li>
+<li>Rol: Ayudante de Investigación</li>
+<li>Institución: Centro de Economía y Política Regional</li>
+<li>Contacto: rocio.valdebenito at edu.uai.cl</li>
 </ul></li>
 <li><p><a href="morales.html"> Felipe Morales </a></p>
 <ul>
-<li>Rol: research assistant</li>
-<li>Institution: Centro de Economía y Política Regional.</li>
-<li>Contact: f.morales at uai.cl</li>
+<li>Rol: Ayudante de Investigación</li>
+<li>Institución: Centro de Economía y Política Regional.</li>
+<li>Contacto: f.morales at edu.uai.cl</li>
 </ul></li>
 </ul>
 </div>
@@ -308,35 +308,35 @@ p    {color: black;}
 <ul>
 <li><p><a href="anke.html"> Anke Mönnig </a></p>
 <ul>
-<li>Rol: Chief economist</li>
-<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
-<li>Contact: moennig at gws-os.com</li>
+<li>Rol: Investigadora Responsable en el Extranjero</li>
+<li>Institución: GWS mbH (Institute of Economic Structures Research)</li>
+<li>Contacto: moennig at gws-os.com</li>
 </ul></li>
 <li><p><a href="Marc.html">Marc Ingo Wolter </a></p>
 <ul>
-<li>Rol: research associate</li>
-<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
-<li>Contact: wolter at gws-os.com</li>
+<li>Rol: Investigador Asociado en el Extranjero</li>
+<li>Institución: GWS mbH (Institute of Economic Structures Research)</li>
+<li>Contacto: wolter at gws-os.com</li>
 </ul></li>
 <li><p><a href="anett.html"> Anett Groẞmann </a></p>
 <ul>
-<li>Rol: research associate</li>
-<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
-<li>Contact: grossmann at gws-os.com</li>
+<li>Rol: Investigador Asociado en el Extranjero</li>
+<li>Institución: GWS mbH (Institute of Economic Structures Research)</li>
+<li>Contacto: grossmann at gws-os.com</li>
 </ul></li>
 <li><p><a href="loreto.html">Loreto Bieritz </a></p>
 <ul>
-<li>Rol: research associate</li>
-<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
-<li>Contact: bieritz at gws-os.com</li>
+<li>Rol: Investigador Asociado en el Extranjero</li>
+<li>Institución: GWS mbH (Institute of Economic Structures Research)</li>
+<li>Contacto: bieritz at gws-os.com</li>
 </ul></li>
 <li><p><a href="hohmann.html">Frank Hohmann </a></p>
 <ul>
-<li>Rol: research associate</li>
-<li>Institution: GWS mbH (Institute of Economic Structures Research)</li>
-<li>Contact: hohmann at gws-os.com</li>
+<li>Rol: Investigador Asociado en el Extranjero</li>
+<li>Institución: GWS mbH (Institute of Economic Structures Research)</li>
+<li>Contacto: hohmann at gws-os.com</li>
 </ul></li>
-<li><p><a href="index_en.html"> Return to Index </a></p></li>
+<li><p><a href="index.html"> Volver al Índice </a></p></li>
 </ul>
 </div>
 
