--- a/datos.html
+++ b/datos.html
@@ -261,43 +261,44 @@ body {background-color: powderblue;}
 h1   {color: grey;}
 p    {color: black;}
 </style>
-<div id="data" class="section level3">
-<h3><font face="Arial Black"> Data</font></h3>
-<p>En construcción…</p>
 <html>
 <body>
-<p><font face="Arial Black"> Labor market variables: </font></p>
+<div id="datos" class="section level3">
+<h3><font face="Arial Black"> Datos</font></h3>
+<p>Uno de los principales aportes del proyecto BMBF está basado en la entrega de datos para el análisis de políticas nacionales y regionales vinculadas al sector minero. El equipo de investigadores ha recopilado más de 300 variables macro/microeconómicas relacionadas a las cuentas nacionales, variables de actividad económica, variables demográficas, variables laborales, matrices insumo-producto, entre otras.</p>
+<p>En los siguientes links se encuentran las siguientes bases de datos disponibles para descarga:</p>
+<p><font face="Arial Black"> Bases de datos laborales: </font></p>
 <ul>
 <li></li>
 </ul>
-<p><font face="Arial Black"> Demographic variables: </font></p>
+<p><font face="Arial Black"> Bases de datos demográficas: </font></p>
 <ul>
-<li><a href="poblacionCEPAL.xlsx">Cuentas </a></li>
+<li><a href="/datos/poblacionCEPAL.xlsx">Pronósticos demográficos </a></li>
 </ul>
-<p><font face="Arial Black"> National Accounts </font></p>
-<ul>
-<li></li>
-</ul>
-<p><font face="Arial Black"> Input-Output matrices: </font></p>
-<ul>
-<li><p><a href="MIPs73x73_1986.xlsx"> IOT 1986 </a></p></li>
-<li><p><a href="mip 1996.xls"> IOT 1996 </a></p></li>
-<li><p><a href="mip 2003.xlsx"> IOT 2003 </a></p></li>
-<li><p><a href="mip 2008.xlsx"> IOT 2008 </a></p></li>
-<li><p><a href="mip 2013.xlsx"> IOT 2013 </a></p></li>
-</ul>
-<p><font face="Arial Black"> Regional Variables </font></p>
-<ul>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-</ul>
-<p><font face="Arial Black"> Summary statistics: </font></p>
+<p><font face="Arial Black"> Bases de datos relacionadas a cuentas nacionales: </font></p>
 <ul>
 <li></li>
 </ul>
-<p><a href="index_en.html"> Return to index </a></p>
+<p><font face="Arial Black"> Matrices Insumo Producto: </font></p>
+<ul>
+<li><p><a href="/datos/mip1986.XLS"> MIP 1986 </a></p></li>
+<li><p><a href="/datos/mip1996.xls"> MIP 1996 </a></p></li>
+<li><p><a href="/datos/mip2003.xls"> MIP 2003 </a></p></li>
+<li><p><a href="/datos/mip2008.xlsx"> MIP 2008 </a></p></li>
+<li><p><a href="/datos/mip2013.xlsx"> MIP 2013 </a></p></li>
+</ul>
+<p><font face="Arial Black"> Variables Regionales </font></p>
+<ul>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+</ul>
+<p><font face="Arial Black"> Resúmenes estadísticos: </font></p>
+<ul>
+<li></li>
+</ul>
+<p><a href="index.html"> Volver al Índice </a></p>
 </body>
 </html>
 </div>
