--- a/quienessomos_en.html
+++ b/quienessomos_en.html
@@ -236,7 +236,7 @@ $(document).ready(function () {
       <a href="https://cepruai.github.io/uaibmbf/index.html">Spanish</a>
     </li>
     <li>
-      <a href="hola.html">German</a>
+      <a href="https://cepruai.github.io/uaibmbf_ger/index.html">German</a>
     </li>
   </ul>
 </li>
@@ -292,7 +292,7 @@ p    {color: black;}
 <h3><font face="Arial Black"> About COFORCE project </font></h3>
 <p>En construcción…</p>
 <div align="center">
-<p><img src="lineas.png" width="600" height="670" align= top * left * bottom></p>
+<p><img src="/quienessomos/lineas.png" width="600" height="670" align= top * left * bottom></p>
 </div>
 </div>
 
