--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="noticias.html">
+    <span class="fa fa-home"></span>
+     
+    Nachrichten
+  </a>
+</li>
+<li>
   <a href="equipo.html">
     <span class="fa fa-info"></span>
      
