--- a/publicacion_en.html
+++ b/publicacion_en.html
@@ -186,6 +186,13 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="noticias.html">
+    <span class="fa fa-home"></span>
+     
+    Nachrichten
+  </a>
+</li>
+<li>
   <a href="equipo.html">
     <span class="fa fa-info"></span>
      
@@ -295,7 +302,7 @@ Brandt, Bieritz, Mönnig &amp; Großmann
 Development of Sustainable Mining Strategies in Chile with a Regionalized National Model
 </td>
 <td>
-<p><a href="gws-paper17-2.pdf">Download</p>
+<p><a href="/PUBLICACIONES/gwspaper.pdf">Download</p>
 </td>
 </tr>
 <tr>
