--- a/quienessomos_en.html
+++ b/quienessomos_en.html
@@ -22,7 +22,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -90,6 +92,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -183,6 +188,13 @@ $(document).ready(function () {
     <span class="fa fa-home"></span>
      
     Zuhause
+  </a>
+</li>
+<li>
+  <a href="noticias.html">
+    <span class="fa fa-home"></span>
+     
+    Nachrichten
   </a>
 </li>
 <li>
@@ -290,7 +302,7 @@ p    {color: black;}
 </body>
 <div id="about-coforce-project" class="section level3">
 <h3><font face="Arial Black"> About COFORCE project </font></h3>
-<p>En construcción…</p>
+<p>Building…</p>
 <div align="center">
 <p><img src="/quienessomos/lineas.png" width="600" height="670" align= top * left * bottom></p>
 </div>
