--- a/datos.html
+++ b/datos.html
@@ -285,7 +285,7 @@ p    {color: black;}
 </ul>
 <p><font face="Arial Black"> Bases de datos demográficas: </font></p>
 <ul>
-<li><a href="/datos/poblacionCEPAL.xlsx">Pronósticos demográficos </a></li>
+<li><a href="/DATOS/poblacionCEPAL.xlsx">Pronósticos demográficos </a></li>
 </ul>
 <p><font face="Arial Black"> Bases de datos relacionadas a cuentas nacionales: </font></p>
 <ul>
@@ -293,11 +293,11 @@ p    {color: black;}
 </ul>
 <p><font face="Arial Black"> Matrices Insumo Producto: </font></p>
 <ul>
-<li><p><a href="/datos/mip1986.XLS"> MIP 1986 </a></p></li>
-<li><p><a href="/datos/mip1996.xls"> MIP 1996 </a></p></li>
-<li><p><a href="/datos/mip2003.xls"> MIP 2003 </a></p></li>
-<li><p><a href="/datos/mip2008.xlsx"> MIP 2008 </a></p></li>
-<li><p><a href="/datos/mip2013.xlsx"> MIP 2013 </a></p></li>
+<li><p><a href="/DATOS/mip1986.xls"> MIP 1986 </a></p></li>
+<li><p><a href="/DATOS/mip1996.xls"> MIP 1996 </a></p></li>
+<li><p><a href="/DATOS/mip2003.xls"> MIP 2003 </a></p></li>
+<li><p><a href="/DATOS/mip2008.xlsx"> MIP 2008 </a></p></li>
+<li><p><a href="/DATOS/mip2013.xlsx"> MIP 2013 </a></p></li>
 </ul>
 <p><font face="Arial Black"> Variables Regionales </font></p>
 <ul>
