--- a/datos.html
+++ b/datos.html
@@ -293,7 +293,7 @@ p    {color: black;}
 </ul>
 <p><font face="Arial Black"> Matrices Insumo Producto: </font></p>
 <ul>
-<li><p><a href="/DATOS/mip1986.xls"> MIP 1986 </a></p></li>
+<li><p><a href="/DATOS/mip1986.xlsx"> MIP 1986 </a></p></li>
 <li><p><a href="/DATOS/mip1996.xls"> MIP 1996 </a></p></li>
 <li><p><a href="/DATOS/mip2003.xls"> MIP 2003 </a></p></li>
 <li><p><a href="/DATOS/mip2008.xlsx"> MIP 2008 </a></p></li>
